# AgarioServer

./: .gitignore  .gitmodules  Bomb.hpp  CMakeLists.txt  README.md  Renderer.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  bomb.hpp  callbackObserver.hpp  circle.cpp  circle.hpp  classicMap.cpp  classicMap.hpp  constants.hpp  game.hpp  gameObject.cpp  gameObject.hpp  main.cpp  map.cpp  map.hpp  mini.hpp  mouseObserver.cpp  mouseObserver.hpp  regularPolygon.hpp  renderer.cpp  renderer.hpp  shape.cpp  shape.hpp  test  test.cpp  testMap.hpp
.github/workflows/: build.yml  clientBuild.yml  server_tests.yml  test.yml
SFMLmodels/: SFMLbomb.hpp
debug/: Agario  CMakeCache.txt  Makefile  cmake_install.cmake
debug/engine/glm/: Makefile  cmake_install.cmake
engine/: CMakeLists.txt  agario_engine.hpp  allshapes.hpp  bomb.cpp  bomb.hpp  constants.hpp  game.cpp  game.hpp  gameObject.cpp  gameObject.hpp  player.cpp  player.hpp  playerObject.cpp  playerObject.hpp
engine/maps/: constants.hpp  map.cpp  map.hpp  mapBombController.cpp  mapBombController.hpp  mapController.cpp  mapController.hpp  mapCrashController.cpp  mapCrashController.hpp  mapMiniController.cpp  mapMiniController.hpp  mapPlayerMovement.cpp  mapPlayerMovement.hpp
engine/shapes/: allshapes.hpp  circle.cpp  circle.hpp  mini.cpp  mini.hpp  moveableCircle.cpp  moveableCircle.hpp  regularPolygon.cpp  regularPolygon.hpp  shape.cpp  shape.hpp  wObject.cpp  wObject.hpp
lib/AgarioEngine/: constants.hpp  game.cpp  playerObject.cpp  playerObject.hpp
lib/AgarioEngine/maps/: map.cpp  mapController.hpp  mapMiniController.cpp  mapPlayerMovement.hpp
lib/AgarioEngine/shapes/: mini.hpp  wObject.hpp
mapDecorators/: meshDecorator.cpp
maps/: classicMap.hpp  map.cpp  map.hpp  testMap.cpp  testMap.hpp
network/: client  client.hpp  dataFormatServer.cpp  dataFormatServer.hpp  klient  sendDataFormat.cpp  sendDataFormat.hpp  server  server.cpp  server.hpp  serwer  simpleServer  threadFunctions.cpp  threadFunctions.hpp  zad1_klient.cpp  zad1_serwer.c
network/client/: simpleSFMLclient.cpp
network/testNetwork/: Makefile  simpleSFMLclient.cpp  simple_client  simpleclient  test_server.cpp  testclient
pythonClient/: client.py  constants.py  gameState.py  parseData.py  views.py
renderer/: SFMLRenderer.cpp
renderers/: SFMLRenderer.cpp  SFMLRenderer.hpp
renderers/SFMLmodels/: SFMLplayerObject.cpp  SFMLplayerObject.hpp
shapes/: bomb.hpp  circle.cpp  circle.hpp  shape.cpp  shape.hpp
src/network/: CMakeLists.txt  client.hpp  constants.hpp  constants_server.hpp  dataFormatServer.cpp  dataFormatServer.hpp  dataFormatter.hpp  dataInterface.cpp  dataInterface.hpp  jsonSendFormat.cpp  jsonSendFormat.hpp  sendDataFormat.cpp  sendDataFormat.hpp  server.cpp  server.hpp  threadFunctions.cpp  threadFunctions.hpp
src/pythonClient/: agario.py  bot.py  client.py  constants.py  gameInterface.py  gameState.py  parseData.py  requirements.txt
src/pythonClient/tests/: data_interface_test.py  game_test.py  player_test.py
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  jsonDataFormatterFixture.cpp  main.cpp
